@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash if the placement guide was put into the cursor without an icon
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2020-11-24
